libxc-ffi/src/ffi_xc_static.rs

unsafe extern "C" {
    pub fn xc_reference() -> *const c_char;
    pub fn xc_reference_doi() -> *const c_char;
    pub fn xc_reference_key() -> *const c_char;
    pub fn xc_version(major: *mut c_int, minor: *mut c_int, micro: *mut c_int);
    pub fn xc_version_string() -> *const c_char;
    pub fn xc_func_reference_get_ref(reference: *const func_reference_type) -> *const c_char;
    pub fn xc_func_reference_get_doi(reference: *const func_reference_type) -> *const c_char;
    pub fn xc_func_reference_get_bibtex(reference: *const func_reference_type) -> *const c_char;
    pub fn xc_func_reference_get_key(reference: *const func_reference_type) -> *const c_char;
    #[cfg(feature = "api-v7_1")]
    pub fn xc_func_info_get_default_flags() -> c_int;
    #[cfg(feature = "api-v7_1")]
    pub fn xc_func_info_set_default_flags(flags: c_int);
    pub fn xc_func_info_get_number(info: *const xc_func_info_type) -> c_int;
    pub fn xc_func_info_get_kind(info: *const xc_func_info_type) -> c_int;
    pub fn xc_func_info_get_name(info: *const xc_func_info_type) -> *const c_char;
    pub fn xc_func_info_get_family(info: *const xc_func_info_type) -> c_int;
    pub fn xc_func_info_get_flags(info: *const xc_func_info_type) -> c_int;
    pub fn xc_func_info_get_references(
        info: *const xc_func_info_type,
        number: c_int,
    ) -> *const func_reference_type;
    pub fn xc_func_info_get_n_ext_params(info: *const xc_func_info_type) -> c_int;
    pub fn xc_func_info_get_ext_params_name(
        p: *const xc_func_info_type,
        number: c_int,
    ) -> *const c_char;
    pub fn xc_func_info_get_ext_params_description(
        info: *const xc_func_info_type,
        number: c_int,
    ) -> *const c_char;
    pub fn xc_func_info_get_ext_params_default_value(
        info: *const xc_func_info_type,
        number: c_int,
    ) -> f64;
    #[doc = " Get a functional's id number from its name"]
    pub fn xc_functional_get_number(name: *const c_char) -> c_int;
    #[doc = " Get a functional's name from its id number"]
    pub fn xc_functional_get_name(number: c_int) -> *mut c_char;
    #[doc = " Get a functional's family and the number within the family from the id number"]
    pub fn xc_family_from_id(id: c_int, family: *mut c_int, number: *mut c_int) -> c_int;
    #[doc = " The number of functionals implemented in this version of libxc"]
    pub fn xc_number_of_functionals() -> c_int;
    #[doc = " The maximum name length of any functional"]
    pub fn xc_maximum_name_length() -> c_int;
    #[doc = " Returns the available functional number sorted by id"]
    pub fn xc_available_functional_numbers(list: *mut c_int);
    #[doc = " Returns the available functional number sorted by the functionals'\nnames; this function is a helper for the Python frontend."]
    pub fn xc_available_functional_numbers_by_name(list: *mut c_int);
    #[doc = " Fills the list with the names of the available functionals,\nordered by name. The list array should be [Nfuncs][maxlen+1]."]
    pub fn xc_available_functional_names(list: *mut *mut c_char);
    #[doc = " Dynamically allocates a libxc functional; which will also need to be initialized."]
    pub fn xc_func_alloc() -> *mut xc_func_type;
    #[doc = " Initializes a functional by id with nspin spin channels"]
    pub fn xc_func_init(p: *mut xc_func_type, functional: c_int, nspin: c_int) -> c_int;
    #[cfg(feature = "api-v7_1")]
    #[doc = " Initializes a functional by id with nspin spin channels for gpu or cpu depending on flags"]
    pub fn xc_func_init_flags(
        p: *mut xc_func_type,
        functional: c_int,
        nspin: c_int,
        flags: c_int,
    ) -> c_int;
    #[doc = " Destructor for an initialized functional"]
    pub fn xc_func_end(p: *mut xc_func_type);
    #[doc = " Frees a dynamically allocated functional"]
    pub fn xc_func_free(p: *mut xc_func_type);
    #[doc = " Get information on a functional"]
    pub fn xc_func_get_info(p: *const xc_func_type) -> *const xc_func_info_type;
    #[doc = " Sets the density threshold for a functional"]
    pub fn xc_func_set_dens_threshold(p: *mut xc_func_type, t_dens: f64);
    #[doc = " Sets the spin polarization threshold for a functional"]
    pub fn xc_func_set_zeta_threshold(p: *mut xc_func_type, t_zeta: f64);
    #[doc = " Sets the reduced gradient threshold for a functional"]
    pub fn xc_func_set_sigma_threshold(p: *mut xc_func_type, t_sigma: f64);
    #[doc = " Sets the kinetic energy density threshold for a functional"]
    pub fn xc_func_set_tau_threshold(p: *mut xc_func_type, t_tau: f64);
    #[cfg(feature = "api-v7_0")]
    #[doc = " Turns the Fermi hole curvature enforcement on or off: 0 is off, != 0 is on"]
    pub fn xc_func_set_fhc_enforcement(p: *mut xc_func_type, on: c_int);
    #[doc = " Sets all external parameters for a functional"]
    pub fn xc_func_set_ext_params(p: *mut xc_func_type, ext_params: *const f64);
    #[cfg(feature = "api-v7_0")]
    #[doc = " Gets all external parameters for a functional. Array needs to be preallocated"]
    pub fn xc_func_get_ext_params(p: *const xc_func_type, ext_params: *mut f64);
    #[doc = " Sets an external parameter by name for a functional"]
    pub fn xc_func_set_ext_params_name(p: *mut xc_func_type, name: *const c_char, par: f64);
    #[cfg(feature = "api-v7_0")]
    #[doc = " Gets an external parameter by name for a functional"]
    pub fn xc_func_get_ext_params_name(p: *const xc_func_type, name: *const c_char) -> f64;
    #[cfg(feature = "api-v7_0")]
    #[doc = " Gets an external parameter by index"]
    pub fn xc_func_get_ext_params_value(p: *const xc_func_type, number: c_int) -> f64;
    #[doc = " New API"]
    pub fn xc_lda_new(
        p: *const xc_func_type,
        order: c_int,
        np: usize,
        rho: *const f64,
        out: *mut xc_lda_out_params,
    );
    pub fn xc_gga_new(
        p: *const xc_func_type,
        order: c_int,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        out: *mut xc_gga_out_params,
    );
    #[cfg(feature = "api-v7_0")]
    pub fn xc_mgga_new(
        func: *const xc_func_type,
        order: c_int,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        out: *mut xc_mgga_out_params,
    );
    #[doc = " Evaluate an     LDA functional"]
    pub fn xc_lda(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        v2rho2: *mut f64,
        v3rho3: *mut f64,
        v4rho4: *mut f64,
    );
    #[doc = " Evaluate a      GGA functional"]
    pub fn xc_gga(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2sigma2: *mut f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rhosigma2: *mut f64,
        v3sigma3: *mut f64,
        v4rho4: *mut f64,
        v4rho3sigma: *mut f64,
        v4rho2sigma2: *mut f64,
        v4rhosigma3: *mut f64,
        v4sigma4: *mut f64,
    );
    #[doc = " Evaluate a meta-GGA functional"]
    pub fn xc_mgga(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl_rho: *const f64,
        tau: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
        v2rho2: *mut f64,
        v2rhosigma: *mut f64,
        v2rholapl: *mut f64,
        v2rhotau: *mut f64,
        v2sigma2: *mut f64,
        v2sigmalapl: *mut f64,
        v2sigmatau: *mut f64,
        v2lapl2: *mut f64,
        v2lapltau: *mut f64,
        v2tau2: *mut f64,
        v3rho3: *mut f64,
        v3rho2sigma: *mut f64,
        v3rho2lapl: *mut f64,
        v3rho2tau: *mut f64,
        v3rhosigma2: *mut f64,
        v3rhosigmalapl: *mut f64,
        v3rhosigmatau: *mut f64,
        v3rholapl2: *mut f64,
        v3rholapltau: *mut f64,
        v3rhotau2: *mut f64,
        v3sigma3: *mut f64,
        v3sigma2lapl: *mut f64,
        v3sigma2tau: *mut f64,
        v3sigmalapl2: *mut f64,
        v3sigmalapltau: *mut f64,
        v3sigmatau2: *mut f64,
        v3lapl3: *mut f64,
        v3lapl2tau: *mut f64,
        v3lapltau2: *mut f64,
        v3tau3: *mut f64,
        v4rho4: *mut f64,
        v4rho3sigma: *mut f64,
        v4rho3lapl: *mut f64,
        v4rho3tau: *mut f64,
        v4rho2sigma2: *mut f64,
        v4rho2sigmalapl: *mut f64,
        v4rho2sigmatau: *mut f64,
        v4rho2lapl2: *mut f64,
        v4rho2lapltau: *mut f64,
        v4rho2tau2: *mut f64,
        v4rhosigma3: *mut f64,
        v4rhosigma2lapl: *mut f64,
        v4rhosigma2tau: *mut f64,
        v4rhosigmalapl2: *mut f64,
        v4rhosigmalapltau: *mut f64,
        v4rhosigmatau2: *mut f64,
        v4rholapl3: *mut f64,
        v4rholapl2tau: *mut f64,
        v4rholapltau2: *mut f64,
        v4rhotau3: *mut f64,
        v4sigma4: *mut f64,
        v4sigma3lapl: *mut f64,
        v4sigma3tau: *mut f64,
        v4sigma2lapl2: *mut f64,
        v4sigma2lapltau: *mut f64,
        v4sigma2tau2: *mut f64,
        v4sigmalapl3: *mut f64,
        v4sigmalapl2tau: *mut f64,
        v4sigmalapltau2: *mut f64,
        v4sigmatau3: *mut f64,
        v4lapl4: *mut f64,
        v4lapl3tau: *mut f64,
        v4lapl2tau2: *mut f64,
        v4lapltau3: *mut f64,
        v4tau4: *mut f64,
    );
    #[doc = " Evaluates the energy density for an     LDA functional"]
    pub fn xc_lda_exc(p: *const xc_func_type, np: usize, rho: *const f64, zk: *mut f64);
    #[doc = " Evaluates the energy density for a      GGA functional"]
    pub fn xc_gga_exc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        zk: *mut f64,
    );
    #[doc = " Evaluates the energy density for a meta-GGA functional"]
    pub fn xc_mgga_exc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        zk: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first derivative for an     LDA functional"]
    pub fn xc_lda_exc_vxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first derivative for a      GGA functional"]
    pub fn xc_gga_exc_vxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
    );
    #[doc = " Evaluates the energy density and its first derivative for a meta-GGA functional"]
    pub fn xc_mgga_exc_vxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        zk: *mut f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
    );
    #[doc = " Evaluates the first derivative of the energy density for an     LDA functional"]
    pub fn xc_lda_vxc(p: *const xc_func_type, np: usize, rho: *const f64, vrho: *mut f64);
    #[doc = " Evaluates the first derivative of the energy density for a      GGA functional"]
    pub fn xc_gga_vxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        vrho: *mut f64,
        vsigma: *mut f64,
    );
    #[doc = " Evaluates the first derivative of the energy density for a meta-GGA functional"]
    pub fn xc_mgga_vxc(
        p: *const xc_func_type,
        np: usize,
        rho: *const f64,
        sigma: *const f64,
        lapl: *const f64,
        tau: *const f64,
        vrho: *mut f64,
        vsigma: *mut f64,
        vlapl: *mut f64,
        vtau: *mut f64,
    );
